# Zephyr_RISCV_TestSuite

./: README.md
baremetal/: PORTING_NOTES.md  README.md
baremetal/common/: baremetal.cmake  baremetal_main.c  baremetal_syms.S  baremetal_trap.S  m_trap.c  smode.c
baremetal/p0_sanity/: CMakeLists.txt
baremetal/p1a_mmu_enable/: CMakeLists.txt  prj.conf
baremetal/p1b_fault_gen/: CMakeLists.txt  prj.conf
baremetal/p1c_fault_handle/: CMakeLists.txt
baremetal/p1d_tlb_ptw/: CMakeLists.txt
baremetal/p2_interrupts/: CMakeLists.txt
baremetal/p3_atomics/: CMakeLists.txt
baremetal/p4_dualcore/: CMakeLists.txt  prj.conf
baremetal/zephyr-patches/: baremetal-suite.patch
rv64gcv-baremetal-testsuite-main/: .gitignore  .gitlab-ci.yml  BAREMETAL_REFERENCE.md  Dockerfile  Makefile  README.md
rv64gcv-baremetal-testsuite-main/common/: asm_defs.h  boot.S  link.ld  m_trap.c  platform.h  smode.c  spike_uart.c  test.h
rv64gcv-baremetal-testsuite-main/tests/: p0_sanity.c  p1a_mmu_enable.c  p1b_fault_gen.c  p1c_fault_handle.c  p1d_tlb_ptw.c  p2_interrupts.c  p3_atomics.c  p4_dualcore.c
zephyr-changes/: README.md  zephyr-riscv-port.patch
zephyr-suite/: NOTES.md
zephyr-suite/p0_sanity/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr-suite/p0_sanity/src/: p0_sanity.c
zephyr-suite/p1a_mmu_enable/: CMakeLists.txt  testcase.yaml
zephyr-suite/p1a_mmu_enable/src/: p1a_mmu_enable.c
zephyr-suite/p1b_fault_gen/: CMakeLists.txt  testcase.yaml
zephyr-suite/p1b_fault_gen/src/: p1b_fault_gen.c
zephyr-suite/p1c_fault_handle/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr-suite/p1c_fault_handle/src/: p1c_fault_handle.c
zephyr-suite/p1d_tlb_ptw/: CMakeLists.txt  testcase.yaml
zephyr-suite/p1d_tlb_ptw/src/: p1d_tlb_ptw.c
zephyr-suite/p2_interrupts/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr-suite/p2_interrupts/src/: p2_interrupts.c
zephyr-suite/p3_atomics/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr-suite/p3_atomics/src/: p3_atomics.c
zephyr-suite/p4_dualcore/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr-suite/p4_dualcore/src/: p4_dualcore.c
